--- a/css/desktop.scss
+++ b/css/desktop.scss
@@ -1,12 +1,10 @@
 $navbarHeight: 100px;
 
-html,
-body {
-  background-color: #f7ece1;
+html, body {
+  background-color: #F7ECE1;
   color: #f4f3ee;
   margin: 0;
-  // font-family: "Roboto", sans-serif;
-  font-family: "Source Code Pro", monospace;
+  font-family: 'Roboto', sans-serif;
   scroll-behavior: smooth;
 }
 
@@ -25,7 +23,7 @@ a {
   height: $navbarHeight;
   width: 50%;
   top: 0;
-  font-size: 2rem;
+  font-size: 1.5rem;
   z-index: 2;
 }
 
@@ -42,8 +40,7 @@ a {
     width: 100%;
     height: $navbarHeight;
     background-color: #111;
-    box-shadow: 0 -10px 10px 0 rgba(0, 0, 0, 0.3),
-      0 10px 10px 0 rgba(0, 0, 0, 0.3);
+    box-shadow: 0 -10px 10px 0 rgba(0, 0, 0, 0.3), 0 10px 10px 0 rgba(0, 0, 0, 0.3);
   }
 }
 
@@ -53,7 +50,7 @@ a {
   align-items: center;
   justify-content: center;
   height: calc(100vh - #{$navbarHeight});
-
+  
   .background {
     position: absolute;
     object-fit: cover;
@@ -63,17 +60,17 @@ a {
     height: 100%;
     filter: brightness(80%);
   }
-
+  
   p {
     z-index: 1;
-    margin: 10px 20px;
-    text-align: center;
+    font-family: 'Source Code Pro', monospace;
+    margin: 10px 75px;
   }
 
   #big-name {
     font-size: 5rem;
   }
-
+  
   #work-title {
     font-size: 3rem;
   }
@@ -81,19 +78,16 @@ a {
 
 #tech {
   position: relative;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: $navbarHeight;
+  display: flex;
+  justify-content: space-around;
   align-items: center;
   width: 100%;
   height: $navbarHeight;
   background-color: #111;
-  z-index: 2;
+  z-index: 1;
 
   img {
-    object-fit: contain;
-    width: 90%;
-    max-height: 80%;
+    height: 80%;
     z-index: inherit;
   }
 }
@@ -103,49 +97,26 @@ a {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  padding: 50px 0;
 
   p {
     color: #111;
     font-size: 2rem;
-    margin: 50px 0;
+    margin: 0 0 50px 0;
   }
-
+  
   .grid-container {
     display: grid;
     grid-template-columns: 450px 450px;
     grid-template-rows: 1fr 1fr;
     justify-items: stretch;
     gap: 50px;
-    margin-bottom: 50px;
-
+  
     .website-preview {
       img {
         width: 100%;
-        box-shadow: 0 -10px 10px 0 rgba(0, 0, 0, 0.3),
-          0 10px 10px 0 rgba(0, 0, 0, 0.3);
+        box-shadow: 0 -10px 10px 0 rgba(0, 0, 0, 0.3), 0 10px 10px 0 rgba(0, 0, 0, 0.3);
       }
     }
-  }
-}
-
-@media screen and (max-width: 1000px) {
-  .navbar {
-    width: 90%;
-    font-size: 1.5rem;
-  }
-
-  #big-name {
-    font-size: 3rem !important;
-  }
-
-  #work-title {
-    font-size: 1.5rem !important;
-  }
-
-  .grid-container {
-    display: flex !important;
-    flex-direction: column;
-    align-items: center;
-    width: 90%;
   }
 }
