--- a/scss/style.scss
+++ b/scss/style.scss
@@ -98,7 +98,7 @@ a {
   }
 }
 
-#work {
+#portfolio {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -106,13 +106,13 @@ a {
 
   p {
     color: #111;
-    font-size: 2rem;
+    font-size: 3rem;
     margin: 50px 0;
   }
 
   .grid-container {
     display: grid;
-    grid-template-columns: 450px 450px;
+    grid-template-columns: 450px 450px 450px;
     grid-template-rows: 1fr 1fr;
     justify-items: stretch;
     gap: 50px;
@@ -142,10 +142,20 @@ a {
     font-size: 1.5rem !important;
   }
 
+  #portfolio p {
+    font-size: 2rem;
+  }
+
   .grid-container {
     display: flex !important;
     flex-direction: column;
     align-items: center;
     width: 90%;
+  }
+}
+
+@media screen and (max-width: 1500px) {
+  .grid-container {
+    grid-template-columns: 450px 450px !important;
   }
 }
