Added half of the contact section

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 html,
 body {
   background-color: #f7ece1;
-  color: #f4f3ee;
+  color: #111;
   margin: 0;
   font-family: "Source Code Pro", monospace;
   scroll-behavior: smooth;
@@ -9,7 +9,7 @@ body {
 
 a {
   text-decoration: none;
-  color: #eee;
+  color: #111;
 }
 
 .navbar {
@@ -24,6 +24,9 @@ a {
   top: 0;
   font-size: 2rem;
   z-index: 2;
+}
+.navbar a {
+  color: #eee;
 }
 
 #navbar-sticky {
@@ -60,6 +63,7 @@ a {
   z-index: 1;
   margin: 10px 20px;
   text-align: center;
+  color: #f4f3ee;
 }
 #landing #big-name {
   font-size: 5rem;
@@ -75,9 +79,10 @@ a {
   grid-template-rows: 100px;
   align-items: center;
   width: 100%;
-  height: 100px;
+  height: 150px;
   background-color: #111;
   z-index: 2;
+  box-shadow: 0 -10px 10px 0 rgba(0, 0, 0, 0.3), 0 10px 10px 0 rgba(0, 0, 0, 0.3);
 }
 #tech img {
   object-fit: contain;
@@ -108,6 +113,32 @@ a {
 #portfolio .grid-container .website-preview img {
   width: 100%;
   box-shadow: 0 -10px 10px 0 rgba(0, 0, 0, 0.3), 0 10px 10px 0 rgba(0, 0, 0, 0.3);
+}
+
+#contact {
+  display: flex;
+  justify-content: center;
+  height: calc(100vh - 100px);
+}
+#contact #contact-info {
+  position: relative;
+  margin: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+}
+#contact #contact-info h1 {
+  position: absolute;
+  top: 0;
+  font-weight: 600;
+  font-size: 2.5rem;
+}
+#contact #contact-info p {
+  font-size: 1.2rem;
+}
+#contact #contact-info a {
+  text-decoration: underline;
 }
 
 @media screen and (max-width: 1000px) {
