Added form for faster contact

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,16 @@ a {
   color: #111;
 }
 
+form input {
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px 12px;
+}
+form textarea {
+  height: 200px;
+  padding: 10px 12px;
+}
+
 .navbar {
   position: absolute;
   display: flex;
@@ -76,10 +86,10 @@ a {
   position: relative;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 100px;
+  grid-template-rows: 100%;
   align-items: center;
   width: 100%;
-  height: 150px;
+  height: 100px;
   background-color: #111;
   z-index: 2;
   box-shadow: 0 -10px 10px 0 rgba(0, 0, 0, 0.3), 0 10px 10px 0 rgba(0, 0, 0, 0.3);
@@ -117,28 +127,49 @@ a {
 
 #contact {
   display: flex;
+  flex-direction: column;
+  height: 100%;
+  min-height: calc(100vh - 100px);
+}
+#contact h1 {
+  font-weight: 600;
+  font-size: 2.5rem;
+  margin: 50px;
+  text-align: center;
+}
+#contact .container {
+  display: flex;
   justify-content: center;
-  height: calc(100vh - 100px);
+  margin: 0 10px;
 }
 #contact #contact-info {
-  position: relative;
-  margin: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-right: 50px;
+}
+#contact #contact-info #contact-info-details {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 100%;
 }
-#contact #contact-info h1 {
-  position: absolute;
-  top: 0;
-  font-weight: 600;
-  font-size: 2.5rem;
-}
-#contact #contact-info p {
+#contact #contact-info #contact-info-details p {
+  margin: 0 0 25px 0;
   font-size: 1.2rem;
 }
-#contact #contact-info a {
+#contact #contact-info #contact-info-details a {
   text-decoration: underline;
+}
+#contact #contact-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-width: 300px;
+  margin-left: 50px;
+}
+#contact #contact-form input, #contact #contact-form textarea {
+  box-sizing: border-box;
+  width: 100%;
 }
 
 @media screen and (max-width: 1000px) {
@@ -164,6 +195,16 @@ a {
     flex-direction: column;
     align-items: center;
     width: 90%;
+  }
+
+  #contact .container {
+    flex-direction: column;
+  }
+  #contact #contact-info {
+    margin: 0 10px;
+  }
+  #contact #contact-form {
+    margin: 0 10px;
   }
 }
 @media screen and (max-width: 1500px) {
