--- a/css/style.scss
+++ b/css/style.scss
@@ -152,7 +152,7 @@ form {
   flex-direction: column;
   height: 100%;
   min-height: calc(100vh - #{$navbarHeight});
-  
+
   h1 {
     font-weight: 600;
     font-size: 2.5rem;
@@ -198,6 +198,12 @@ form {
     input, textarea {
       box-sizing: border-box;
       width: 100%;
+      border-radius: 5px;
+    }
+
+    #submit-button {
+      margin: 15px 0;
+      background-color: #86d4a7;
     }
   }
 }
